--- a/now.json
+++ b/now.json
@@ -1,3 +1,3 @@
 {
-  "routes": [{ "src": "/", "dest": "/install/index.html" }]
+  "routes": [{ "src": "/", "dest": "/install/github-downloader.sh" }]
 }
