--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ pages:
 - Submit Jobs: submit-jobs.md
 - List Jobs: list-jobs.md
 - Download Results: download-results.md
-
+- Projects: projects.md
 
 repo_name: lukfor/imputationbot
 repo_url: https://github.com/lukfor/imputationbot
