--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ pages:
 - List Jobs: list-jobs.md
 - Download Results: download-results.md
 - Projects: projects.md
+- Contact: contact.md
 
 repo_name: lukfor/imputationbot
 repo_url: https://github.com/lukfor/imputationbot
