--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ pages:
 - List Jobs: list-jobs.md
 - Download Results: download-results.md
 - Manage Projects: projects.md
+- FAQ: faq.md
 - Contact: contact.md
 
 repo_name: lukfor/imputationbot
