--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 	</developers>
 
 	<properties>
-		<maven.compiler.release>8</maven.compiler.release>
+		<java.version>1.8</java.version>
 		<restlet.version>2.3.12</restlet.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -114,7 +114,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<release>8</release>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
 
