--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,7 @@
 				</executions>
 			</plugin>
 
-			<!-- Build cloudgene installer -->
+			<!-- Build installer -->
 
 			<plugin>
 				<groupId>com.github.hazendaz.maven</groupId>
@@ -190,6 +190,28 @@
 						<id>makeself</id>
 						<goals>
 							<goal>makeself</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Code Coverage -->
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.5</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
