--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
+					<release>8</release>
 				</configuration>
 			</plugin>
 
