--- a/pom.xml
+++ b/pom.xml
@@ -128,49 +128,79 @@
 			</plugin>
 
 
-			<!-- Build jar -->
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.0</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>genepi.imputationbot.App</mainClass>
-						</manifest>
-						<manifestEntries>
-							<Version>${project.version}</Version>
-							<Build-Time>${maven.build.timestamp}</Build-Time>
-						</manifestEntries>
-					</archive>
-				</configuration>
-
-			</plugin>
-
-			<!-- Build final directory structure and zip files -->
+			<!-- Build jar with all dependencies -->
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.4</version>
+				<configuration>
+					<!-- get all project dependencies -->
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>	
+					<!-- MainClass in mainfest make a executable jar -->
+					<archive>
+						<manifest>
+							<mainClass>genepi.imputationbot.App</mainClass>
+						</manifest>
+					</archive>
+
+				</configuration>
 				<executions>
 					<execution>
-						<id>create-assembly</id>
-						<phase>package</phase>
+						<id>make-assembly</id>
+						<!-- bind to the packaging phase -->
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>	
+
+
+			<!-- Create windows binaries -->
+
+			<plugin>
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+				<artifactId>launch4j-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>imputation-bot-exe</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>launch4j</goal>
+						</goals>
 						<configuration>
-							<descriptors>
-								<descriptor>src/main/assembly/assembly.xml</descriptor>
-							</descriptors>
+							<headerType>console</headerType>
+							<outfile>${project.build.directory}/${project.artifactId}.exe</outfile>
+							<jar>${project.build.directory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</jar>
+							<errTitle>enccg</errTitle>
+							<classPath>
+								<mainClass>genepi.imputationbot.App</mainClass>
+							</classPath>
+							<jre>
+								<minVersion>1.8.0</minVersion>
+								<maxHeapSize>500</maxHeapSize>
+							</jre>
+							<versionInfo>
+								<fileDescription>imputation-bot</fileDescription>
+								<copyright>Lukas Forer, Sebastian Schoenherr, Christian
+									Fuchsberger</copyright>
+								<fileVersion>${project.version}.0</fileVersion>
+								<txtFileVersion>${project.version}.0</txtFileVersion>
+								<productVersion>${project.version}.0</productVersion>
+								<txtProductVersion>${project.version}.0</txtProductVersion>
+								<productName>imputation-bot</productName>
+								<companyName>Genepi Innsbruck</companyName>
+								<internalName>imputation-bot</internalName>
+								<originalFilename>imputationbot.exe</originalFilename>
+							</versionInfo>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+
 
 			<!-- Build installer -->
 
@@ -179,7 +209,7 @@
 				<artifactId>makeself-maven-plugin</artifactId>
 				<version>1.0.0.beta3</version>
 				<configuration>
-					<archiveDir>imputationbot-${project.version}-assembly</archiveDir>
+					<archiveDir>imputationbot-${project.version}-linux</archiveDir>
 					<fileName>imputationbot-installer.sh</fileName>
 					<notemp>true</notemp>
 					<current>true</current>
@@ -189,12 +219,35 @@
 				<executions>
 					<execution>
 						<id>makeself</id>
+						<phase>package</phase>					
 						<goals>
 							<goal>makeself</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
+
+			<!-- Build final zip files -->
+
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>create-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<descriptors>
+								<descriptor>src/main/assembly/windows.xml</descriptor>
+								<descriptor>src/main/assembly/linux.xml</descriptor>
+								<descriptor>src/main/assembly/mac.xml</descriptor>
+							</descriptors>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>	
 
 			<!-- Code Coverage -->
 
