--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -13,10 +13,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Set up JDK 1.9
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.9
+          java-version: '17'
+          distribution: 'adopt'
           
       - name: Build
         run: mvn install
